[lesson1]: made links opened in new tab

--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -24,7 +24,7 @@ https://simpsons.fandom.com/wiki/Category:Simpson_family
     Show, in the comedy short Good Night. The family has hundreds of relatives, including Mr. Burns and Patty and
     Selma.</p>
 <!--h2+a - заголовок з якорем який веде на сторінку персонажу. Хомер-->
-<h2><a href="https://simpsons.fandom.com/wiki/Homer_Simpson"> Homer Simpson</a></h2>
+<h2><a href="https://simpsons.fandom.com/wiki/Homer_Simpson" target="_blank"> Homer Simpson</a></h2>
 <!--img - з картинкою персонажу (картинку завантажити в проєкт)-->
 <img src="images/Homer_Simpson.webp" alt = "Homer Simpson"/>
 <!--р - опис персонажу-->
@@ -62,7 +62,7 @@ https://simpsons.fandom.com/wiki/Category:Simpson_family
     </li>
 </ul>
 <!--h2+a - заголовок з якорем який веде на сторінку персонажу. Барт-->
-<h2><a href="https://simpsons.fandom.com/wiki/Bart_Simpson">Bart Simpson</a></h2>
+<h2><a href="https://simpsons.fandom.com/wiki/Bart_Simpson" target="_blank">Bart Simpson</a></h2>
 <!--img - з картинкою персонажу (картинку завантажити в проєкт)-->
 <img src="images/Bart_Simpson.webp" alt="Bart Simpson"/>
 <!--р - опис персонажу-->
@@ -95,7 +95,7 @@ https://simpsons.fandom.com/wiki/Category:Simpson_family
 </ul>
 
 <!--h2+a - заголовок з якорем який веде на сторінку персонажу. Ліза-->
-<h2><a href="https://simpsons.fandom.com/wiki/Lisa_Simpson" >Lisa Simpson</a></h2>
+<h2><a href="https://simpsons.fandom.com/wiki/Lisa_Simpson" target="_blank">Lisa Simpson</a></h2>
 <!--img - з картинкою персонажу (картинку завантажити в проект)-->
 <img src="images/Lisa_Simpson_official.webp" alt = "Lisa Simpson"/>
 <!--р - опис персонажу-->
