[lesson1]: changed design

--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -16,18 +16,37 @@ https://simpsons.fandom.com/wiki/Category:Simpson_family
 -->
 <!--h1-загальний заголовок з назвою сторінки-->
 <h1>Simpson Family</h1>
+<div>
 <!--img - Загальна фотка родини (картинка вантажиться за посиланням)-->
-<img src="https://static.wikia.nocookie.net/simpsons/images/6/63/The_Simpsons_Simpsons_FamilyPicture.png" alt = "Simpson Family"/>
+<img src="https://static.wikia.nocookie.net/simpsons/images/6/63/The_Simpsons_Simpsons_FamilyPicture.png" alt = "Simpson Family" class="family"/>
 
 <!--p - загальний опис серіалу-->
 <p>The Simpsons are the main protagonists of the TV show The Simpsons. The family first appeared on The Tracey Ullman
     Show, in the comedy short Good Night. The family has hundreds of relatives, including Mr. Burns and Patty and
     Selma.</p>
+</div>
 <!--h2+a - заголовок з якорем який веде на сторінку персонажу. Хомер-->
 <h2><a href="https://simpsons.fandom.com/wiki/Homer_Simpson" target="_blank"> Homer Simpson</a></h2>
+<div class = "container">
+
 <!--img - з картинкою персонажу (картинку завантажити в проєкт)-->
 <img src="images/Homer_Simpson.webp" alt = "Homer Simpson"/>
-<!--р - опис персонажу-->
+    <!--ul+li - з 2-3 основними фразами персонажу-->
+    <ul>
+        <li>
+            <blockquote>“Stupid Flanders!”<i>―Homer to his neighbor.</i></blockquote>
+        </li>
+        <li>
+            <blockquote>“Better them than me.”
+                <i>―Push notification when a character other than Homer finishes a job.</i></blockquote>
+        </li>
+        <li>
+            <blockquote>“Let's all go out for frosty chocolate milkshakes!”
+                <i>―Homer in the Tracey Ullman era.</i></blockquote>
+        </li>
+    </ul>
+</div>
+    <!--р - опис персонажу-->
 <p>Homer Jay Simpson (born May 12, 1956) is a man from Springfield. He is the spouse of Marge Simpson and father of
     Bart, Lisa and Maggie Simpson. Homer is overweight (said to be 239 pounds), lazy, and often ignorant to the
     world around him. Although he has many flaws, he has shown to have great caring, love, and even bravery to those he
@@ -47,24 +66,30 @@ https://simpsons.fandom.com/wiki/Category:Simpson_family
     <br>
     Homer may just be a normal man, but he has had many great achievements and experiences in his life. He has won a
     Grammy, an Academy Award, a Pulitzer Prize, been to space and saved Springfield many times.</p>
-<!--ul+li - з 2-3 основними фразами персонажу-->
-<ul>
-    <li>
-        <blockquote>“Stupid Flanders!”<i>―Homer to his neighbor.</i></blockquote>
-    </li>
-    <li>
-        <blockquote>“Better them than me.”
-            <i>―Push notification when a character other than Homer finishes a job.</i></blockquote>
-    </li>
-    <li>
-        <blockquote>“Let's all go out for frosty chocolate milkshakes!”
-            <i>―Homer in the Tracey Ullman era.</i></blockquote>
-    </li>
-</ul>
+
 <!--h2+a - заголовок з якорем який веде на сторінку персонажу. Барт-->
 <h2><a href="https://simpsons.fandom.com/wiki/Bart_Simpson" target="_blank">Bart Simpson</a></h2>
+
+<div class = "container">
 <!--img - з картинкою персонажу (картинку завантажити в проєкт)-->
 <img src="images/Bart_Simpson.webp" alt="Bart Simpson"/>
+<!--ul+li - з 2-3 основними фразами персонажу-->
+    <ul>
+        <li>
+            <blockquote>“I’m Bart Simpson, who the hell are you?”
+                <i> ―Bart's fourth catchphrase</i></blockquote>
+        </li>
+        <li>
+            <blockquote>“Don't have a cow, man.”
+                <i>―Bart's third catchphrase</i></blockquote>
+        </li>
+        <li>
+            <blockquote>“Eat my shorts!”
+                <i>―Bart's second catchphrase</i></blockquote>
+        </li>
+    </ul>
+
+</div>
 <!--р - опис персонажу-->
 <p>
     Bartholomew JoJo "Bart" Simpson (born Feburary 23 or April 1, 1980)is the mischievous, rebellious, misunderstood,
@@ -78,41 +103,13 @@ https://simpsons.fandom.com/wiki/Category:Simpson_family
     discovered a new comet which was named after him, and he also has performed in a successful band with Milhouse
     Van Houten, Nelson Muntz, and Ralph Wiggum
 </p>
-<!--ul+li - з 2-3 основними фразами персонажу-->
-<ul>
-    <li>
-        <blockquote>“I’m Bart Simpson, who the hell are you?”
-            <i> ―Bart's fourth catchphrase</i></blockquote>
-    </li>
-    <li>
-        <blockquote>“Don't have a cow, man.”
-            <i>―Bart's third catchphrase</i></blockquote>
-    </li>
-    <li>
-        <blockquote>“Eat my shorts!”
-            <i>―Bart's second catchphrase</i></blockquote>
-    </li>
-</ul>
 
 <!--h2+a - заголовок з якорем який веде на сторінку персонажу. Ліза-->
 <h2><a href="https://simpsons.fandom.com/wiki/Lisa_Simpson" target="_blank">Lisa Simpson</a></h2>
+<div class="container">
+
 <!--img - з картинкою персонажу (картинку завантажити в проект)-->
 <img src="images/Lisa_Simpson_official.webp" alt = "Lisa Simpson"/>
-<!--р - опис персонажу-->
-<p>Lisa Marie Simpson (born May 9, 1983) is the elder daughter and middle child of the Simpson family and one of the
-    two tritagonists (along with Marge,) of The Simpsons series.
-    <br>
-    In "Homer and Lisa Exchange Cross Words" she is also known as Lisa Bouvier. She was named after a train called Lil'
-    Lisa on her parents' 1st anniversary. She is a charismatic 8-year-old girl, who exceeds the standard achievement of
-    the intelligence level of children her age. Not to everyone's surprise, she is also the moral center of her family.
-    In her upbringing, Lisa lacks parental involvement of Homer and Marge, which leads to hobbies such as playing
-    saxophone and guitar, riding and caring for horses, and interest in advanced studies. In school, Lisa's popularity
-    is affected by those who view her as a geeky overachiever, which leaves her with only a few friends. She focuses on
-    her goals and strives to reach her potential, and at the age of eight, she is already a member of Mensa with an IQ
-    of 159. Her lack of parental involvement also leads to her lashing out at those who she deems lower than her or even
-    above her. She has extreme jealousy from time to time and will do whatever it takes to reclaim her title as the
-    smartest; but only if she deems it necessary. Otherwise, she's the intelligent one who usually thinks things
-    through.</p>
 <!--ul+li - з 2-3 основними фразами персонажу-->
 <ul>
     <li>
@@ -129,6 +126,24 @@ https://simpsons.fandom.com/wiki/Category:Simpson_family
             <i>―Lisa Simpson</i></blockquote>
     </li>
 </ul>
+</div>
+
+<!--р - опис персонажу-->
+<p>Lisa Marie Simpson (born May 9, 1983) is the elder daughter and middle child of the Simpson family and one of the
+    two tritagonists (along with Marge,) of The Simpsons series.
+    <br>
+    In "Homer and Lisa Exchange Cross Words" she is also known as Lisa Bouvier. She was named after a train called Lil'
+    Lisa on her parents' 1st anniversary. She is a charismatic 8-year-old girl, who exceeds the standard achievement of
+    the intelligence level of children her age. Not to everyone's surprise, she is also the moral center of her family.
+    In her upbringing, Lisa lacks parental involvement of Homer and Marge, which leads to hobbies such as playing
+    saxophone and guitar, riding and caring for horses, and interest in advanced studies. In school, Lisa's popularity
+    is affected by those who view her as a geeky overachiever, which leaves her with only a few friends. She focuses on
+    her goals and strives to reach her potential, and at the age of eight, she is already a member of Mensa with an IQ
+    of 159. Her lack of parental involvement also leads to her lashing out at those who she deems lower than her or even
+    above her. She has extreme jealousy from time to time and will do whatever it takes to reclaim her title as the
+    smartest; but only if she deems it necessary. Otherwise, she's the intelligent one who usually thinks things
+    through.</p>
+
 
 </body>
 </html>
