[lesson2]: fixed colors and idea's warnings

--- a/lesson2/responsive.html
+++ b/lesson2/responsive.html
@@ -16,7 +16,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci aliquid beatae corporis distinctio
             ipsum itaque neque nobis soluta velit.</p>
 
-        <img src="images/img1.png" height="70" width="70"/>
+        <img src="images/img1.png" height="70" width="70" alt = "Avatar 1"/>
         <p class = "name">John Doe</p>
 
     </div>
@@ -25,7 +25,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci aliquid beatae corporis distinctio
             ipsum itaque neque nobis soluta velit.</p>
 
-        <img src="images/img2.png" height="70" width="70"/>
+        <img src="images/img2.png" height="70" width="70" alt = "Avatar 2"/>
             <p class = "name">John Doe</p>
 
     </div>
@@ -34,12 +34,12 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci aliquid beatae corporis distinctio
             ipsum itaque neque nobis soluta velit.</p>
 
-        <img src="images/img3.png" height="70" width="70"/>
+        <img src="images/img3.png" height="70" width="70" alt = "Avatar 3"/>
         <p class = "name">John Doe</p>
     </div>
     <div class = "text">
-    <h1>RESPONSIVE TESTIMONIALS CARD</h1>
-    <h2>UI DESIGN USING HTML & CSS ONLY</h2>
+        <h1>RESPONSIVE <strong>TESTIMONIALS</strong> CARD</h1>
+        <h2>UI DESIGN USING <strong>HTML</strong> & <strong>CSS </strong> ONLY</h2>
     </div>
 </div>
 
