--- a/lesson2/card3.html
+++ b/lesson2/card3.html
@@ -5,8 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles/card3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/ab96f823e7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/card3.css">
+
 
     <title>card 3</title>
 </head>
