--- a/lesson3/cards1.html
+++ b/lesson3/cards1.html
@@ -5,10 +5,54 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles/card1s.css">
+  <script src="https://kit.fontawesome.com/c3fd170405.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="styles/cards1.css">
   <title>card 1</title>
 </head>
 <body>
+<div class="main-container">
+  <div class="box">
+    <div class="round">
+      <i class="fa-solid fa-desktop"></i>
+    </div>
+    <div class = "text">
+      <h3>Responsive Design</h3>
+      <p>Flat bootstrap responsive our services box free downloading.
+        <br>
+        Download and use it.</p>
+    </div>
+    <div class="more"><p>Learn more</p></div>
+  </div>
+
+
+  <div class="box">
+    <div class="round">
+      <i class="fa-solid fa-earth-americas"></i>
+    </div>
+      <div class = "text">
+      <h3>
+        User Interface Design
+      </h3>
+      <p>Flat bootstrap responsive our services box free downloading.
+        <br>
+        Download and use it.</p>
+    </div>
+    <div class="more"><p>Learn more</p></div>
+  </div>
+
+  <div class="box">
+    <div class="round">
+      <i class="fa-solid fa-martini-glass-empty"></i>
+    </div>
+    <div class = "text">
+      <h3>Web Development</h3>
+      <p>Flat bootstrap responsive our services box free downloading.
+        <br>
+        Download and use it.</p>
+    </div>
+    <div class="more"><p>Learn more</p></div>
+  </div>
+</div>
 
 </body>
 </html>
