[lesson4]: implemented adaptive 30 mobile website design tips.png

--- a/lesson4/mobile_website_design.html
+++ b/lesson4/mobile_website_design.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/base1.css">
-  <link rel="stylesheet" href="styles/base1media.css">
-  <title>30 mobile website design </title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/mobile_design.css">
+      <link rel="stylesheet" href="styles/mobile_design_media.css">
+    <title>30 mobile website design </title>
 </head>
 <body>
 <div class="header-bar">
-  <div class="header-bar-logo">1 LOGO</div>
-  <div class="header-bar-header">2 HEADER</div>
+    <div class="header-bar-logo bg-brown">1 LOGO</div>
+    <div class="header-bar-header bg-brown">2 HEADER</div>
 </div>
-<div class="navigation">3 NAV</div>
-<div class="main-content">
-  <div class="first-block">
-  <div class="selection-intro">4 BATH SELECTION INTRO</div>
-  <div class="ad">5 AD</div>
-  </div>
-  <div class="second-block">
-    <div class="types">6 TYPES OF BATHS</div>
-    <div class="related-products">7 RELATED PRODUCTS</div>
-  </div>
-</div>
+<div class="content">
+    <div class="navigation bg-brown">3 NAV</div>
+    <div class="main-content">
+        <div class="first-block">
+            <div class="selection-intro bg-brown">4 BATH SELECTION INTRO</div>
+            <div class="ad bg-brown">5 AD</div>
+        </div>
+        <div class="second-block">
+            <div class="types bg-brown">6 TYPES OF BATHS</div>
+            <div class="related-products bg-brown">7 RELATED PRODUCTS</div>
+        </div>
 
-<div class="footer">10 FOOTER</div>
-
+        <div class="locator-and-tools">
+            <div class="box bg-brown">8 LOCATORS</div>
+            <div class="box bg-brown">9 TOOLS</div>
+        </div>
+    </div>
 </div>
+    <div class="footer bg-brown">10 FOOTER</div>
+
 </body>
 </html>
